Test/Solver/Error.expected

Test/Solver/Error.lean:15:0: error: Cannot bind x to symbol of type Int, maybe the symbol has already been defined?
